added loading states

--- a/src/app/components/loading/loading.component.html
+++ b/src/app/components/loading/loading.component.html
@@ -34,3 +34,14 @@
         <div class="comment animate"></div>
     </div>
 </div>
+
+<div class="profile" *ngIf="type === 'profile'">
+    <div class="profile-picture">
+        <div class="image-container animate">
+        </div>
+        <div class="text">
+            <p class="comment animate"></p>
+            <p class="comment animate"></p>
+        </div>
+    </div>
+</div>
