--- a/src/app/components/loading/loading.component.scss
+++ b/src/app/components/loading/loading.component.scss
@@ -115,6 +115,29 @@
     }
 }
 
+.profile {
+    .profile-picture {
+        display: grid;
+        grid-template-columns: 90px 1fr 100px;
+        border-radius: 50%;
+        margin-bottom: 20px;
+        margin-top: 25px;
+
+        .image-container {
+            border-radius: 50%;
+            width: 75px;
+            height: 75px;
+            margin-right: 15px;
+        }
+
+        .text {
+            p {
+                margin-bottom: 0;
+            }
+        }
+    }
+}
+
 .comment {
     height: 10px;
     background: #777;
