--- a/src/app/layouts/main/main.component.html
+++ b/src/app/layouts/main/main.component.html
@@ -4,6 +4,11 @@
             <mat-icon>{{ isMenuActive ? 'clear' : 'menu' }}</mat-icon>
         </button>
         <h1 class="app-name"><a routerLink="/">Everest</a></h1>
+        <div class="search">
+            <form [formGroup]="searchForm">
+                <input type="text" placeholder="Search" formControlName="query">
+            </form>
+        </div>
         <div class="profile-container">
             <div class="profile-image" [matMenuTriggerFor]="menu"
                 [ngStyle]="{ 'background-image': 'url(' + image  +')' }">
@@ -26,6 +31,7 @@
         <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'" [fixedInViewport]="mobileQuery.matches"
             fixedTopGap="56">
             <mat-nav-list>
+                <h1 class="app-name"><a routerLink="/">Everest</a></h1>
                 <a routerLink="/" routerLinkActive="active-sidenav">
                     <fa-icon [icon]="faStream"></fa-icon>&nbsp;&nbsp;Feed
                 </a>
