wip search result

--- a/src/app/components/search-result/search-result.component.html
+++ b/src/app/components/search-result/search-result.component.html
@@ -1,15 +1,15 @@
-<mat-list class="search-result">
-    <h3 mat-subheader>Folders</h3>
-    <mat-list-item>
-        <mat-icon mat-list-icon>folder</mat-icon>
-        <h4 mat-line>Folder name</h4>
-        <p mat-line>Other info</p>
-    </mat-list-item>
-    <mat-divider></mat-divider>
-    <h3 mat-subheader>Notes</h3>
-    <mat-list-item>
-        <mat-icon mat-list-icon>note</mat-icon>
-        <h4 mat-line>Note name</h4>
-        <p mat-line>Updated</p>
-    </mat-list-item>
-</mat-list>
+<div class="search-result">
+    <div class="users">
+        <h3>Users</h3>
+        <div class="user">
+            <div class="item-a"></div>
+            <p class="item-b">Jon Snow</p>
+            <small class="item-c">@johnsnow</small>
+        </div>
+        <div class="user">
+            <div class="item-a"></div>
+            <p class="item-b">Samwell Tarly</p>
+            <small class="item-c">@johnsnow</small>
+        </div>
+    </div>
+</div>
