--- a/src/app/layouts/main/main.component.scss
+++ b/src/app/layouts/main/main.component.scss
@@ -17,7 +17,7 @@
 
 	.toolbar {
 		display: grid;
-		grid-template-columns: 50px 1fr 1fr 1fr;
+		grid-template-columns: 50px 1fr 250px;
 		background-color: white;
 		box-shadow: 0 2px 16px rgba(0, 0, 0, .1);
 		z-index: 100;
@@ -35,33 +35,8 @@
 		}
 
 		.search {
-			grid-column-start: 2;
-    		grid-column-end: 4;
 			justify-self: center;
 			align-self: center;
-	
-			form {
-				margin: 0;
-				
-				input {
-					padding: 8px 5px 5px 5px;
-					font-size: 14px;
-					border: 1px solid rgba(0, 0, 0, .1);
-					border-radius: 5px;
-					width: 100%;
-
-					&::placeholder {
-						color: rgba(0, 0, 0, .7);
-					}
-				}
-			}
-		}
-
-		.search-result {
-			position: absolute;
-			top: 50px;
-			left: 50%;
-			transform: translateX(-50%);
 		}
 	}
 
