--- a/src/app/pages/signup/signup.component.scss
+++ b/src/app/pages/signup/signup.component.scss
@@ -1,3 +1,32 @@
+.password-strength {
+	display: inline-grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	width: 100%;
+
+	.level {
+		padding: 4px;
+		background-color: grey;
+
+		&:nth-of-type(1) {
+			border-top-left-radius: 10px;
+			border-bottom-left-radius: 10px;
+			border-right: 1px solid white;
+		}
+
+		&:nth-of-type(3) {
+			border-top-right-radius: 10px;
+			border-bottom-right-radius: 10px;
+			border-left: 1px solid white;
+		}
+	}
+
+	p {
+		margin: 0;
+		font-size: 12px;
+		color: rgba(0, 0, 0, .7);
+	}
+}
+
 .password-check-list {
 	padding: 1px 15px;
 	background-color: white;
