--- a/src/app/general/post/post.component.html
+++ b/src/app/general/post/post.component.html
@@ -2,7 +2,7 @@
   <!-- * Header -->
   <div class="header">
     <div class="user-image" 
-    [routerLink]="['/profile/', username]"
+    [routerLink]="['/profile/user', username]"
     [ngStyle]="{ 'background-image': 'url(' + userImage  +')' }">
     </div>
     <div class="uploader-info">
