--- a/src/app/general/dialogs/po/po.component.scss
+++ b/src/app/general/dialogs/po/po.component.scss
@@ -1,18 +1,47 @@
-.mat-dialog-title {
-    text-transform: uppercase;
-
-    fa-icon {
-        color: rgba(0,0,0,.7);
-        margin-right: 10px;
-    }
-}
-
 .options {
+    max-width: 300px;
     .top {
         button {
             display: block;
             width: 100%;
             margin-bottom: 5px;
+        }
+
+        p {
+            font-size: 12px;
+        }
+    }
+
+    .opt-buttons-container {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+
+        .opt-button {
+            border: 1px solid rgba(180, 180, 180, 0.4);
+            border-radius: 50%;
+            padding: 5px;
+            width: 50px;
+            height: 50px;
+            justify-self: center;
+            cursor: pointer;
+            position: relative;
+
+            fa-icon {
+                color: rgba(0, 0, 0, .7);
+                position: absolute;
+                top: 38%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+            }
+
+            p {
+                font-size: 12px;
+                text-align: center;
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+            }
         }
     }
 }
