--- a/src/app/pages/signup/signup.component.scss
+++ b/src/app/pages/signup/signup.component.scss
@@ -1,3 +1,15 @@
+%green-glow {
+	box-shadow: 0 0 5px rgba(10, 255, 88, 1);
+}
+
+%yellow-glow {
+	box-shadow: 0 0 5px rgba(255, 212, 20, 1);
+}
+
+%red-glow {
+	box-shadow: 0 0 5px rgba(245, 0, 49, 1);
+}
+
 .password-strength {
 	display: inline-grid;
 	grid-template-columns: 1fr 1fr 1fr;
@@ -5,18 +17,17 @@
 
 	.level {
 		padding: 4px;
-		background-color: grey;
+		background-color: rgba(136, 136, 136, 0.1);
+		transition: background-color 0.2s ease-in-out;
 
 		&:nth-of-type(1) {
 			border-top-left-radius: 10px;
 			border-bottom-left-radius: 10px;
-			border-right: 1px solid white;
 		}
 
 		&:nth-of-type(3) {
 			border-top-right-radius: 10px;
 			border-bottom-right-radius: 10px;
-			border-left: 1px solid white;
 		}
 	}
 
@@ -25,6 +36,21 @@
 		font-size: 12px;
 		color: rgba(0, 0, 0, .7);
 	}
+}
+
+.red {
+	@extend %red-glow;
+	background-color: #ff1744 !important;
+}
+
+.yellow {
+	@extend %yellow-glow;
+	background-color: #ffea00 !important;
+}
+
+.green {
+	@extend %green-glow;
+	background-color: #00e676 !important;
 }
 
 .password-check-list {
