--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -9,6 +9,7 @@
     </form>
 
     <div class="search-result" *ngIf="isSearchActive && this.searchForm.get('query').value.length > 0">
+        <!-- Users result -->
         <div class="section" *ngIf="users.length > 0">
             <h3>Users</h3>
             <div class="item" *ngFor="let user of users" (mousedown)="goToUser(user.username)">
@@ -18,6 +19,7 @@
             </div>
         </div>
         
+        <!-- Resources result -->
         <div class="section" *ngIf="resources.length > 0">
             <h3>Resources</h3>
             <div class="item" *ngFor="let resource of resources" (mousedown)="goToResource(resource.username, resource._id)">
@@ -27,6 +29,7 @@
             </div>
         </div>
 
+        <!-- Collections result -->
         <div class="section" *ngIf="collections.length > 0">
             <h3>Collections</h3>
             <div class="item" *ngFor="let collection of collections" (mousedown)="goToCollection(collection.username, collection._id)">
@@ -40,6 +43,14 @@
             </div>
         </div>
 
+        <div class="loading" 
+        *ngIf="
+        users.length === 0 && 
+        resources.length === 0 && 
+        collections.length === 0">
+            <fa-icon [icon]="faTimesCircle"></fa-icon>
+            <p>Nothing here! Try a different query?</p>
+        </div>
     </div>
 
     <div class="search-result" *ngIf="isLoading">
