--- a/src/app/pages/profile/edit-profile/edit-profile.component.html
+++ b/src/app/pages/profile/edit-profile/edit-profile.component.html
@@ -108,7 +108,10 @@
                     </mat-form-field>
 
                     <div class="form-button-container">
-                        <app-custom-button buttonLabel="Save" [isDisabled]="isProfileSaveButtonDisabled" size="small">
+                        <app-custom-button 
+                        buttonLabel="Save" 
+                        backgroundColor="delete"
+                        [isDisabled]="isProfileSaveButtonDisabled" size="small">
                         </app-custom-button>
                     </div>
                 </form>
