fixed push into collection during sharing. updated custom button

--- a/src/app/components/custom-button/custom-button.component.html
+++ b/src/app/components/custom-button/custom-button.component.html
@@ -5,7 +5,8 @@ class="custom-button"
 [ngClass]="{
   'not-disabled': isDisabled, 
   'delete-button': isDelete,
-  'is-loading': isLoading
+  'is-loading': isLoading,
+  'hover': !isLoading
 }"
 [disabled]="isDisabled" 
 [ngStyle]="
