--- a/src/app/pages/write/write.component.html
+++ b/src/app/pages/write/write.component.html
@@ -1,1 +1,3 @@
-<ckeditor [editor]="Editor" data="<p>Hello, world!</p>"></ckeditor>
+<div class="document">
+    <ckeditor [config]="editorConfig" [editor]="Editor" required data="" name="text"></ckeditor>
+</div>
