--- a/src/app/pages/manage/manage-resources/manage-resources.component.html
+++ b/src/app/pages/manage/manage-resources/manage-resources.component.html
@@ -12,14 +12,17 @@
     </form>
   </div>
 
-  <!-- * Resource grid -->
-  <div class="resource-grid" *ngIf="!isLoading">
-    <app-resource 
-    *ngFor="let resource of resources" 
-    [data]="resource" 
-    (drResponse)="drResponseHandler($event)" 
-    [isInCollectionPage]="isInCollectionPage">
-    </app-resource>
+  <div class="parent" infiniteScroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="50"
+    (scrolled)="onScrollDown()" [scrollWindow]="false">
+    <div class="resource-grid">
+      <app-resource *ngFor="let resource of resources" [data]="resource" (drResponse)="drResponseHandler($event)"
+        [isInCollectionPage]="isInCollectionPage">
+      </app-resource>
+    </div>
+  </div>
+
+  <div class="see-more" (click)="loadMorePosts()">
+    See More
   </div>
 
   <div *ngIf="resources && resources.length === 0">
