--- a/src/app/pages/manage/manage-resources/manage-resources.component.scss
+++ b/src/app/pages/manage/manage-resources/manage-resources.component.scss
@@ -21,5 +21,14 @@
 
   .resource-grid {
     height: auto;
+    overflow-y: auto;
   }
+}
+
+.see-more {
+  cursor: pointer;
+  text-align: center;
+  font-size: 12px;
+  font-weight: bold;
+  margin: 15px;
 }
