--- a/src/app/general/post/post.component.html
+++ b/src/app/general/post/post.component.html
@@ -66,14 +66,7 @@
     </button>
   </div>
 
-  <!-- * All Comments -->
-  <div class="all-comments" *ngIf="allComments.length > 0 && showComments">
-    <div class="comment" *ngFor="let comment of allComments">
-      <span class="username"><strong>{{ comment.username }}</strong></span>
-      <span class="text">{{ comment.content }}</span>
-      <small class="comment-timestamp">{{ formatTime(comment.timestamp) }}</small>
-    </div>
-  </div>
+  <app-comment *ngIf="showComments" [resourceId]="id"></app-comment>
 
   <!-- * Add Comment -->
   <div class="add-comment">
