--- a/src/app/general/post/comment/comment.component.scss
+++ b/src/app/general/post/comment/comment.component.scss
@@ -3,6 +3,14 @@
     margin-top: 10px;
     padding: 15px 15px 0 15px;
 
+    .see-more {
+        cursor: pointer;
+        font-size: 12px;
+        font-weight: bold;
+        text-align: center;
+        margin: 8px;
+    }
+
     .comment {
         font-size: 14px;
         margin-bottom: 15px;
