moved see more to bottom

--- a/src/app/general/post/comment/comment.component.scss
+++ b/src/app/general/post/comment/comment.component.scss
@@ -8,7 +8,7 @@
         font-size: 12px;
         font-weight: bold;
         text-align: center;
-        margin: 8px;
+        margin: 0 0 15px 0;
     }
 
     .comment {
