--- a/src/app/general/post/post.component.html
+++ b/src/app/general/post/post.component.html
@@ -61,8 +61,8 @@
     </button>
 
     <button mat-button class="btn btn-comment"
-      (click)="showComments = !showComments" [disabled]="!allComments.length > 0">
-      <fa-icon [icon]="faComment"></fa-icon><span *ngIf="allComments.length > 0" class="count">{{ allComments.length }}</span>
+      (click)="showComments = !showComments" [disabled]="!commentCount > 0">
+      <fa-icon [icon]="faComment"></fa-icon><span *ngIf="commentCount > 0" class="count">{{ commentCount }}</span>
     </button>
   </div>
 
