--- a/src/app/general/post/comment/comment.component.scss
+++ b/src/app/general/post/comment/comment.component.scss
@@ -3,14 +3,6 @@
     margin-top: 10px;
     padding: 15px 15px 0 15px;
 
-    .see-more {
-        cursor: pointer;
-        font-size: 12px;
-        font-weight: bold;
-        text-align: center;
-        margin: 0 0 15px 0;
-    }
-
     .comment {
         font-size: 14px;
         margin-bottom: 15px;
@@ -29,4 +21,19 @@
             font-size: 12px;
         }
     }
+}
+
+.see-more {
+    cursor: pointer;
+    font-size: 12px;
+    font-weight: bold;
+    text-align: center;
+    margin: 0 0 15px 0;
+}
+
+.spinner {
+    display: grid;
+    justify-content: center;
+    align-content: center;
+    margin: 20px 0;
 }
