--- a/src/app/pages/write/write.component.html
+++ b/src/app/pages/write/write.component.html
@@ -1,3 +1,1 @@
-<div class="document">
-    <ckeditor [config]="editorConfig" [editor]="Editor" required data="" name="text"></ckeditor>
-</div>
+<editor [apiKey]="apiKey"></editor>
