--- a/src/app/layouts/main/main.component.html
+++ b/src/app/layouts/main/main.component.html
@@ -36,6 +36,9 @@
                 <a routerLink="/share-resource" routerLinkActive="active-sidenav">
                     <fa-icon [icon]="faShareAlt"></fa-icon>&nbsp;&nbsp;Share Resource
                 </a>
+                <a routerLink="/write" routerLinkActive="active-sidenav">
+                    <fa-icon [icon]="faPenAlt"></fa-icon>&nbsp;&nbsp;Write
+                </a>
                 <mat-divider></mat-divider>
                 <a routerLink="/manage/resource" routerLinkActive="active-sidenav">
                     <fa-icon [icon]="faSquare"></fa-icon>&nbsp;&nbsp;Manage Resources
