--- a/src/app/pages/write/write.component.scss
+++ b/src/app/pages/write/write.component.scss
@@ -1,6 +1,15 @@
-.document {
-    min-height: calc(100% - 30px);
-    padding: 15px;
-    box-shadow: 0 8px 20px 0 rgba(145, 145, 145, 0.6);
-    background-color: white;
+.section-container {
+    form {
+        mat-form-field {
+            width: 100%;
+
+            &:nth-of-type(1) {
+                font-size: 25px;
+            }
+        }
+    }
+
+    editor {
+        margin-bottom: 15px;
+    }
 }
