--- a/src/assets/styles/section-container.scss
+++ b/src/assets/styles/section-container.scss
@@ -42,6 +42,10 @@
 			}
 		}
 	}
+
+	.form-button-container {
+		margin-left: auto;
+	}
 }
 
 @media (min-width: 768px) {
@@ -52,6 +56,10 @@
 					width: 150px;
 				}
 			}
+		}
+
+		.form-button-container {
+			width: 150px;
 		}
 	}
 }
