--- a/src/app/pages/write/write.component.scss
+++ b/src/app/pages/write/write.component.scss
@@ -4,7 +4,9 @@
             width: 100%;
 
             &:nth-of-type(1) {
-                font-size: 25px;
+                input {
+                    font-size: 25px;
+                }
             }
         }
     }
